Better shape and fixed column gap

--- a/src/app/components/dropdown-accordion/dropdown-accordion-button/dropdown-accordion-button.component.css
+++ b/src/app/components/dropdown-accordion/dropdown-accordion-button/dropdown-accordion-button.component.css
@@ -1,5 +1,5 @@
 .trapezoid-curved{
-  margin-top: -16px;
+  margin-top: -18px;
 }
 
 .accordion-button {
