--- a/src/app/components/dropdown-accordion/dropdown-accordion-content/dropdown-accordion-content.component.css
+++ b/src/app/components/dropdown-accordion/dropdown-accordion-content/dropdown-accordion-content.component.css
@@ -3,6 +3,7 @@
   background-color: white;
   overflow: hidden;
   border-radius: 2rem;
+  /*justify-content: center;*/
 }
 
 .d-none {
@@ -31,7 +32,7 @@
 
 .d-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fill, 200px);
+  grid-template-columns: repeat(auto-fill, minmax(12.5rem, 1fr));
   column-gap: 2rem;
   row-gap: 1.5rem;
 }
